--- a/HTML project 8.html
+++ b/HTML project 8.html
@@ -8,44 +8,47 @@
 
 <body>
 <main>
-<h1>Racing Video Compilation Page</h1>
-<iframe
+<h1>Motorsports Video Compilation Page</h1>
+<p>These are some of my favourtie Motorsports moments</p>
+<section>
 
-width="800"
-height="500"
-src="https://youtube.com/embed/1XR8DgMSjog"
-allowfullscreen
-></iframe>
+    <h2>James Dean vs Pawel Borkovski</h2>
+    <p>This is one of my favourite battles from the DMEC</p>
+    <iframe
+    title="James Dean vs Pawel Borkovski"
+    width="800"
+    height="500"
+    src="https://youtube.com/embed/1XR8DgMSjog"
+    allowfullscreen
+    ></iframe>
+
+<section>
+    
+    <h2>Stadium Super Truck Space Program</h2>
+    <p>Stadium Super Truck gets launched by a jump</p>
+    <iframe
+    src="https://youtube.com/embed/zkiV59cdR3M"
+    title="Stadium Super Truck gets launched by a jump"
+    width="800"
+    height="500"
+    allowfullscreen
+    ></iframe>
+</section>
+<section>
+<h2>big crash at GTWC 24h of Spa 2025</h2>
+<p>the #22 Porsche has a big collision with the #112 Mclaren</p>
 <iframe
+src="https://youtube.com/embed/kYP7pDQGTqs"
+title="2025 GTWC Belgium crash"
 width="800"
 height="500"
-src="https://youtube.com/embed/M4DIpTytiUY"
-allowfullscreen
 ></iframe>
-<iframe
-src="https://youtube.com/embed/5Vv55M8bDss"
-width="800"
-height="500"
-allowfullscreen
-></iframe>
-<iframe
-src="https://youtube.com/embed/zkiV59cdR3M"
-width="800"
-height="500"
-allowfullscreen
-></iframe>
-<iframe
-src="https://youtube.com/embed/fhMPIHUHZRE"
-width="800"
-height="500"
-allowfullscreen
-></iframe>
-<iframe
-src="https://youtube.com/embed/mxynaINCank"
-width="800"
-height="500"
-allowfullscreen
-></iframe>
+</section>
+</main>
+</body>
+</html>
+
+
 
 </main>
 </body>
